[project]
name = "premier"
version = "0.4.2"
description = "an intuitive throttler supports distributed usage and various throttling algorithms"
authors = [{ name = "raceychan", email = "raceychan@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["redis>=5.0.3,<6"]

[dependency-groups]
test = ["pytest>=8.1.1,<9"]
dev = ["python-semantic-release>=9.4.0,<10"]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src/*.py"]
typeCheckingMode = "strict"
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --maxfail=1"
markers = [
    "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
]

filterwarnings = ["ignore::DeprecationWarning"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
