[project]
name = "premier"
dynamic = ["version"]
description = "an extendable toolbox for scalable apis"
dependencies = ["typing-extensions>=4.14.0"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
redis = ["redis"]
aiohttp = ["aiohttp"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=6.0.0",
  "hatch>=1.14.0",
  "twine>=6.1.0",
]

[tool.hatch.version]
path = "premier/__init__.py"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
addopts = "--strict-markers --capture=no"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning:lihil.signature.parser",
]
markers = [
  "integration_test: marks tests as slow integration tests (deselect with '-m \"not integration_test\"')",
  "debug: marks tests as debug tests (deselect with '-m \"not debug\"')",
  "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
testpaths = ["tests"]
